[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/portalSwitch gravity.png" type="Texture" id=1]
[ext_resource path="res://scripts/teleporter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.71225, 56.9699 )

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 5.4, 60, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 720.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 100.0
radial_accel_random = 1.0
angle = 45.0
angle_random = 1.0
scale_random = 1.0
hue_variation = 0.14
hue_variation_random = 1.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.248408, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
resource_local_to_scene = true
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 6, 60, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
orbit_velocity = 0.1
orbit_velocity_random = 1.0
linear_accel = -100.0
linear_accel_random = 1.0
tangential_accel = 100.0
tangential_accel_random = 1.0
angle = 180.0
angle_random = 1.0
scale = 1.5
scale_random = 1.0
color_ramp = SubResource( 4 )
hue_variation = 1.0
hue_variation_random = 0.1

[node name="Teleporter" type="Node2D"]
script = ExtResource( 2 )

[node name="portal1" type="Area2D" parent="."]
position = Vector2( -20, 0 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="portalSwitch gravity" type="Sprite" parent="portal1"]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="teleportFrom" type="CollisionShape2D" parent="portal1"]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="portal1"]
amount = 100
process_material = SubResource( 2 )

[node name="portal2" type="Sprite" parent="."]
self_modulate = Color( 0, 1, 0.858824, 1 )
position = Vector2( 20, 0 )
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="portal2"]
use_parent_material = true
emitting = false
amount = 500
one_shot = true
randomness = 1.0
fixed_fps = 45
fract_delta = false
process_material = SubResource( 5 )

[connection signal="area_shape_entered" from="portal1" to="." method="_on_teleport1_area_shape_entered"]
[connection signal="area_shape_exited" from="portal1" to="." method="_on_teleport1_area_shape_exited"]
